Doma2のAnnotation Processorが利用している javax.annotation.Generated が Java9 では java.xml.ws.annotation モジュールに配置されているために、 NoClassDefFoundError で落ちてしまう(現在の自分のJigsawのスキルでは解決できなさそう)