@@ -1,4 +1,4 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'idea'
 
 repositories {
@@ -8,6 +8,9 @@ repositories {
 ext {
   domaVersion = '2.17.0'
 }
+
+sourceCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_1_9
 
 tasks.withType(JavaCompile) {
   it.options.encoding = 'UTF-8'
@@ -30,7 +33,7 @@ task showSourceDirs {
 }
 
 project('data') {
-  apply plugin: 'java'
+  apply plugin: 'java-library'
   apply plugin: 'idea'
 
   repositories {
@@ -49,5 +52,9 @@ project('data') {
   idea.module {
     inheritOutputDirs = true
     sourceDirs += project.file("src/main/generated_main")
+  }
+
+  compileJava {
+    options.compilerArgs += ['--add-modules', 'java.xml.ws.annotation']
   }
 }
